# OmniVerte

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICE  OmniVerte.py  OmniVerte.spec  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
i18n/: __init__.py  _de.py  _en.py  _es.py  _fr.py  _it.py  _ja.py  _ru.py  _types.py  _zh.py
installer/: OmniVerte.iss
licensing/: __init__.py  activation.py  api_client.py  config.py  context.py  entitlement.py  features.py  verify.py
scripts/: build.ps1
services/: __init__.py  audio_prep.py  audio_writer.py  autostart.py  config_store.py  glossary.py  machine_id.py  text_operations.py  transcription_models.py  ui_bridge.py  win_utils.py
tests/: conftest.py  test_async_model_load.py  test_audio_prep.py  test_audio_writer_helpers.py  test_autopaste_skip.py  test_config_store.py  test_custom_style_templates.py  test_double_tap.py  test_glossary.py  test_glossary_packs.py  test_glossary_page.py  test_history_manager.py  test_hotkey_capture.py  test_i18n_call_sites.py  test_i18n_catalog.py  test_i18n_retranslate.py  test_languages_page.py  test_license_activation.py  test_licensing.py  test_rec_indicator.py  test_streaming_status.py  test_text_operations.py  test_transcription_page_onboarding.py  test_tray_menu.py
tray_preparing/: __init__.py  tray_placing.py
ui/: custom_style_dialog.py  history_manager.py  hotkey_capture.py  main_window.py  onboarding_dialog.py  qfluent_patches.py  rec_indicator.py  settings_window.py  style.py  taskbar_overlay.py
(+22 files in other folders)
