[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-verte"
description = "Windows voice-to-text desktop assistant: hotkey dictation with local or cloud Whisper transcription and optional AI grammar correction, translation, and rewriting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arsenii Bandurin", email = "arsenybandurin@gmail.com" }]
keywords = ["speech-to-text", "whisper", "dictation", "voice", "transcription", "windows", "openai", "groq"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/Arseny2035/VibeAssistance"
Issues = "https://github.com/Arseny2035/VibeAssistance/issues"

# Single source of truth for the version (read at runtime by the About page)
# and for the dependency list.
[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools]
py-modules = ["OmniVerte"]
packages = ["i18n", "services", "tray_preparing", "ui", "ui.settings_pages", "ui.settings_pages.glossary_packs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
